# ZeroBox

./: .gitignore  Makefile  README.md  README.zh-CN.md
.github/workflows/: android-release.yml  ci.yml  (+3 more)
crates/agent-gui/src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json  tauri.windows.release.conf.json
crates/agent-gui/src-tauri/icons/: icon.icns
crates/agent-gui/src-tauri/icons/android/values/: ic_launcher_background.xml
crates/agent-gui/src-tauri/src/: lib.rs
crates/agent-gui/src-tauri/src/commands/: app.rs  chat_history.rs  cron.rs  delegate.rs  fs.rs  gateway.rs  git.rs  hook.rs  mcp.rs  mod.rs  settings.rs  subagent_history.rs  system.rs  terminal.rs  update.rs
crates/agent-gui/src-tauri/src/commands/app/: app.rs  system.rs  update.rs
crates/agent-gui/src-tauri/src/commands/config/settings/: ccs_import.rs  gateway_sync.rs  mod.rs  remote.rs  system.rs  tests.rs  types.rs
crates/agent-gui/src-tauri/src/commands/history/: history_db.rs
crates/agent-gui/src-tauri/src/commands/history/chat_history/: mod.rs  tests.rs
crates/agent-gui/src-tauri/src/commands/integration/: mcp.rs
crates/agent-gui/src-tauri/src/commands/workspace/: fs.rs  git.rs  mod.rs  subagent_worktree.rs
crates/agent-gui/src-tauri/src/runtime/: managed_process.rs  managed_process_journal.rs  shell_runner.rs  terminal.rs
crates/agent-gui/src-tauri/src/runtime/terminal/: registry.rs  shell.rs  ssh_auth.rs  ssh_channel.rs  ssh_connect.rs  ssh_session.rs  state.rs  tests.rs  types.rs
crates/agent-gui/src-tauri/src/services/: chat_run_ledger.rs  cron.rs  device_credentials.rs  gateway.rs  gateway_bridge.rs  memory.rs  mobile_gateway.rs  mobile_secure_store.rs  mod.rs  power_activity.rs  provider_models.rs  proxy.rs  skills.rs  system_proxy.rs
crates/agent-gui/src-tauri/src/services/automation/: db.rs  scheduler.rs  store.rs  tests.rs  types.rs  validate.rs
crates/agent-gui/src-tauri/src/services/gateway/: chat.rs  chat_inbox.rs  connection.rs  controller.rs  envelope_handler.rs  history_sync.rs  managed_process.rs  mod.rs  settings_sync.rs  terminal.rs  tests.rs  types.rs  util.rs  ws_transport.rs
crates/agent-gui/src-tauri/src/services/skills/: builtin.rs  clawhub.rs  create.rs  external_mcp.rs  install.rs  jobs.rs  library.rs  manager.rs  metadata.rs  mod.rs  sources.rs  tests.rs  types.rs  validate.rs
docs/: README.md
scripts/: mirror-manifest.json
(+466 files in other folders)
