[package]
name = "liveagent"
# Release builds override this dev placeholder from the Git tag workflow.
version = "0.0.0-dev"
description = "LiveAgent desktop application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liveagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde_json = "1.0.149"
tauri-build = { version = "2.5.6", features = [] }
tonic-build = "0.12.3"

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["blocking", "json", "stream"] }
axum = "0.8.8"
tokio = { version = "1.51.0", features = ["macros", "net", "sync", "time", "io-util"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
uuid = { version = "1.23.0", features = ["v4"] }
base64 = "0.22.1"
globset = "0.4.18"
lopdf = "0.35.0"
regex = "1.12.3"
thiserror = "2.0.18"
walkdir = "2.5.0"
notify = "8"
rfd = "0.17.2"
tauri-plugin-mcp-bridge = "0.10.0"
dirs = "6.0.0"
ignore = "0.4.25"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = "0.4.42"
tokio-cron-scheduler = "0.15.1"
tonic = { version = "0.12.3", features = ["transport", "tls-webpki-roots"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
prost = "0.13.5"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
sha2 = "0.10.9"
tempfile = "3.23.0"
tauri-plugin-updater = "2.10.1"
quick-xml = "0.38.4"
portable-pty = "0.9.0"
wait-timeout = "0.2.1"
russh = "0.61"
russh-sftp = "2.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSButton", "NSControl", "NSView", "NSWindow"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
